[package]
name = "async-read-progress"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Extension traits for inspecting `AsyncRead` progress."
readme = "README.md"

[dependencies]
futures-io = "0.3.4"
pin-utils = "0.1.0"

tokio = { version = "0.2", features = ["stream", "io-util"], optional = true }
bytes = { version = "0.5.4", optional = true }

[features]
default = ["with-tokio"]
with-tokio = ["tokio", "bytes"]

[dev-dependencies]
futures-core = "0.3.4"
futures = "0.3.4"
tokio = { version = "0.2", features = ["stream", "io-util", "sync", "rt-threaded", "time", "macros"] }
