[package]
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
description = "Extension traits for inspecting `AsyncRead` progress."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "async-read-progress"
readme = "README.md"
version = "0.2.0"

[dependencies]
futures-io = "0.3.4"
pin-utils = "0.1.0"

bytes = {version = "1.0", optional = true}
tokio = {version = "1.6", features = ["io-util"], optional = true}

[features]
default = ["with-tokio"]
with-tokio = ["tokio", "bytes"]

[dev-dependencies]
futures = "0.3.4"
futures-core = "0.3.4"
tokio = {version = "1.6", features = ["rt-multi-thread", "macros", "time"]}
tokio-stream = {version = "0.1.6"}
tokio-util = {version = "0.6.7", features = ["io"]}
